--- a/src/components/application/appsco-application-actions.html
+++ b/src/components/application/appsco-application-actions.html
@@ -276,23 +276,25 @@ Custom property | Description | Default
             </template>
         </template>
 
-        <template is="dom-if" if="[[ company ]]">
-            <div class="action flex-none">
-                <paper-icon-button id="configAction"
-                                   class="config-icon"
-                                   icon="icons:settings"
-                                   alt="Page Settings"
-                                   on-tap="_onShowPageSettings"></paper-icon-button>
+        <div class="action flex-none">
+            <paper-icon-button id="configAction"
+                               class="config-icon"
+                               icon="icons:settings"
+                               alt="Page Settings"
+                               on-tap="_onShowPageSettings"></paper-icon-button>
 
-                <appsco-page-config-dropdown
-                        id="resourcePageConfigDropdown"
-                        page="resources"
-                        authorization-token="[[ authorizationToken ]]"
-                        page-config-api="[[ pageConfigApi ]]"
-                        page-config="[[ pageConfig ]]"
-                ></appsco-page-config-dropdown>
-            </div>
-        </template>
+            <appsco-page-config-dropdown
+                    id="resourcePageConfigDropdown"
+                    authorization-token="[[ authorizationToken ]]"
+                    api-errors="[[ apiErrors ]]"
+                    page-config-api="[[ pageConfigApi ]]"
+                    page-config="[[ pageConfig ]]"
+                    page="[[ page ]]"
+                    option-hide-resource-section="[[ pageConfigOptionHideResourceSection ]]"
+                    option-display-list="[[ pageConfigOptionDisplayList ]]"
+                    option-sort="[[ pageConfigOptionSort ]]"
+            ></appsco-page-config-dropdown>
+        </div>
 
     </template>
 
@@ -308,9 +310,43 @@ Custom property | Description | Default
                     value: ''
                 },
 
+                apiErrors: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
+                },
+
                 pageConfigApi: {
                     type: String,
                     value: ''
+                },
+
+                pageConfig: {
+                    type: Object,
+                    value: function() {
+                        return {};
+                    }
+                },
+
+                page: {
+                    type: String,
+                    value: ''
+                },
+
+                pageConfigOptionHideResourceSection: {
+                    type: Boolean,
+                    value: false
+                },
+
+                pageConfigOptionDisplayList: {
+                    type: Boolean,
+                    value: false
+                },
+
+                pageConfigOptionSort: {
+                    type: Boolean,
+                    value: false
                 },
 
                 _filterItems: {
@@ -702,6 +738,7 @@ Custom property | Description | Default
             },
 
             reset: function() {
+
                 if (this.$$('#appscoSearch')) {
                     this.$$('#appscoSearch').reset();
                 }
